feat: Introduce `@astracms/astro-loader` package with content collection loaders and documentation.

--- a/apps/docs/content/docs/(index)/index.mdx
+++ b/apps/docs/content/docs/(index)/index.mdx
@@ -8,9 +8,12 @@ icon: Book
 
 ## Getting Started
 
-<Cards cols={2}>
+<Cards cols={3}>
   <Card title="Quickstart" icon={<PlayIcon />} href="/quickstart">
     Get up and running with AstraCMS in minutes.
+  </Card>
+  <Card title="Integrations" icon={<RocketIcon />} href="/integrations/astro-loader">
+    Use AstraCMS with Astro.js Content Collections.
   </Card>
   <Card title="API Reference" icon={<WebhookIcon />} href="/api-reference">
     Explore the Content Delivery API endpoints.
