--- a/apps/docs/content/docs/(index)/quickstart.mdx
+++ b/apps/docs/content/docs/(index)/quickstart.mdx
@@ -110,6 +110,14 @@ const post = await client.posts.get('my-post', {
 <Cards>
 
 <Card
+  title="Astro Integration"
+  icon={<RocketIcon />}
+  href="/integrations/astro-loader"
+>
+  Use AstraCMS with Astro.js Content Collections.
+</Card>
+
+<Card
   title="API Reference"
   icon={<WebhookIcon />}
   href="/api-reference"
@@ -126,3 +134,4 @@ const post = await client.posts.get('my-post', {
 </Card>
 
 </Cards>
+
