--- a/apps/docs/content/docs/changelog/index.mdx
+++ b/apps/docs/content/docs/changelog/index.mdx
@@ -1,19 +1,18 @@
 ---
-title: Product Updates
-description: AstraCMS release notes and updates
-icon: List
+title: Changelog
+description: Latest updates and changes to AstraCMS
+icon: History
 ---
 
-<Updates>
-  <Update label="December 2024">
-    ### Initial Release
+# Changelog
 
-    * **Content Delivery API** - RESTful API for fetching posts, categories, tags, and authors
-    * **Workspace Management** - Isolated environments for your content
-    * **Rich Text Editor** - TipTap-powered editor with markdown support
-    * **Multi-author Support** - Assign multiple authors to posts with profiles and social links
-    * **Tag & Category System** - Flexible content organization
-    * **API Playground** - Interactive API documentation with live testing
+Stay up to date with the latest changes and improvements to AstraCMS.
 
-  </Update>
-</Updates>
+## v1.0.0
+
+Initial release of AstraCMS with:
+
+- Core API client package
+- Framework integrations for React, Next.js, Vue, Nuxt, Svelte, and Astro
+- RESTful API with full CRUD operations
+- TypeScript support with Zod schemas
