chore: Update API domain to `.dev`, refresh schema example IDs, and implement docs API proxy.

--- a/apps/docs/content/docs/api-reference/index.mdx
+++ b/apps/docs/content/docs/api-reference/index.mdx
@@ -9,7 +9,7 @@ Welcome to the **AstraCMS API** documentation. This API provides read-only acces
 ## Base URL
 
 ```
-https://api.astracms.com
+https://api.astracms.dev
 ```
 
 ## API Versions
@@ -39,7 +39,7 @@ We provide two API versions:
 ## Quick Example
 
 ```bash title="Fetch all posts"
-curl -X GET "https://api.astracms.com/v2/posts" \
+curl -X GET "https://api.astracms.dev/v2/posts" \
   -H "Authorization: Bearer YOUR_API_KEY"
 ```
 
@@ -47,7 +47,7 @@ curl -X GET "https://api.astracms.com/v2/posts" \
 {
   "posts": [
     {
-      "id": "cm1post123",
+      "id": "clx4b6d8f0h2j4l6n8p0r",
       "title": "Getting Started with AstraCMS",
       "slug": "getting-started",
       "content": "<p>Your content here...</p>",
