--- a/apps/docs/content/docs/(index)/quickstart.mdx
+++ b/apps/docs/content/docs/(index)/quickstart.mdx
@@ -85,13 +85,13 @@ console.log(post?.title, post?.content)
 If you prefer to use the API directly:
 
 ```bash title="List posts"
-curl -X GET "https://api.astracms.com/v2/posts" \
+curl -X GET "https://api.astracms.dev/v2/posts" \
   -H "Authorization: Bearer YOUR_API_KEY" \
   -H "Content-Type: application/json"
 ```
 
 ```bash title="Get a single post"
-curl -X GET "https://api.astracms.com/v2/posts/my-first-post" \
+curl -X GET "https://api.astracms.dev/v2/posts/my-first-post" \
   -H "Authorization: Bearer YOUR_API_KEY"
 ```
 
