feat: Reimplement AI agents and tools with a new Mastra system in CMS, removing previous AI modules from both docs and cms apps.

--- a/apps/docs/content/docs/(index)/integrations/core.mdx
+++ b/apps/docs/content/docs/(index)/integrations/core.mdx
@@ -244,13 +244,13 @@ const result = postsResponseSchema.parse(apiResponse)
 ## Next Steps
 
 <Cards cols={2}>
-  <Card title="React" icon={<FileTextIcon />} href="/docs/integrations/react">
+  <Card title="React" icon={<FileTextIcon />} href="/integrations/react">
     Use React hooks for data fetching
   </Card>
-  <Card title="Next.js" icon={<FolderIcon />} href="/docs/integrations/next">
+  <Card title="Next.js" icon={<FolderIcon />} href="/integrations/next">
     Server components with caching
   </Card>
-  <Card title="Vue" icon={<VueIcon />} href="/docs/integrations/vue">
+  <Card title="Vue" icon={<VueIcon />} href="/integrations/vue">
     Vue 3 composables
   </Card>
 </Cards>
