style: Standardize self-closing tag syntax for HTML elements and Astro components.

--- a/apps/docs/content/docs/(index)/integrations/astro-loader.mdx
+++ b/apps/docs/content/docs/(index)/integrations/astro-loader.mdx
@@ -122,7 +122,9 @@ const { Content } = await render(post);
     ))}
   </div>
   
-  <Content />
+  <div class="prose">
+    <Content />
+  </div>
   
   <div class="authors">
     {post.data.authors.map((author) => (
