docs: add `notFound` import to Next.js integration example.

--- a/apps/docs/content/docs/(index)/integrations/next.mdx
+++ b/apps/docs/content/docs/(index)/integrations/next.mdx
@@ -74,6 +74,7 @@ For fully static sites:
 
 ```tsx title="app/blog/[slug]/page.tsx"
 import { astracms } from '@/lib/astracms'
+import { notFound } from 'next/navigation'
 
 export async function generateStaticParams() {
   const posts = await astracms.getPosts()
