docs: Add environment variable setup instructions for API keys to all integration guides.

--- a/apps/docs/content/docs/(index)/integrations/core.mdx
+++ b/apps/docs/content/docs/(index)/integrations/core.mdx
@@ -42,6 +42,14 @@ const posts = await client.getPosts()
 const post = await client.getPost('hello-world')
 ```
 
+## Environment Variables
+
+Create a `.env` file in your project:
+
+```bash title=".env"
+ASTRACMS_API_KEY=your_api_key_here
+```
+
 ## Configuration
 
 ### API Key Authentication (Recommended)
