--- a/apps/docs/content/docs/(index)/integrations/next.mdx
+++ b/apps/docs/content/docs/(index)/integrations/next.mdx
@@ -26,6 +26,14 @@ The `@astracms/next` package provides optimized utilities for using AstraCMS wit
   ```
 </Tabs>
 
+## Environment Variables
+
+Create a `.env.local` file in your Next.js project:
+
+```bash title=".env.local"
+ASTRACMS_API_KEY=your_api_key_here
+```
+
 ## Configuration
 
 Create a client instance in your app:
