--- a/apps/docs/content/docs/(index)/integrations/nuxt.mdx
+++ b/apps/docs/content/docs/(index)/integrations/nuxt.mdx
@@ -26,6 +26,14 @@ The `@astracms/nuxt` package provides a Nuxt module for seamless AstraCMS integr
   ```
 </Tabs>
 
+## Environment Variables
+
+Create a `.env` file in your Nuxt project:
+
+```bash title=".env"
+ASTRACMS_API_KEY=your_api_key_here
+```
+
 ## Configuration
 
 Add the module to your `nuxt.config.ts`:
