--- a/apps/docs/content/docs/(index)/integrations/react.mdx
+++ b/apps/docs/content/docs/(index)/integrations/react.mdx
@@ -26,6 +26,14 @@ The `@astracms/react` package provides React hooks for fetching data from AstraC
   ```
 </Tabs>
 
+## Environment Variables
+
+Create a `.env` file in your project:
+
+```bash title=".env"
+REACT_APP_ASTRACMS_API_KEY=your_api_key_here
+```
+
 ## Setup
 
 Wrap your app with the provider:
