--- a/apps/docs/content/docs/(index)/integrations/svelte.mdx
+++ b/apps/docs/content/docs/(index)/integrations/svelte.mdx
@@ -26,6 +26,14 @@ The `@astracms/svelte` package provides Svelte stores and SvelteKit utilities fo
   ```
 </Tabs>
 
+## Environment Variables
+
+Create a `.env` file in your SvelteKit project:
+
+```bash title=".env"
+VITE_ASTRACMS_API_KEY=your_api_key_here
+```
+
 ## Configuration
 
 Create a client instance:
