--- a/apps/docs/content/docs/(index)/integrations/vue.mdx
+++ b/apps/docs/content/docs/(index)/integrations/vue.mdx
@@ -26,6 +26,14 @@ The `@astracms/vue` package provides Vue 3 composables for fetching data from As
   ```
 </Tabs>
 
+## Environment Variables
+
+Create a `.env` file in your Vue project:
+
+```bash title=".env"
+VITE_ASTRACMS_API_KEY=your_api_key_here
+```
+
 ## Setup
 
 Install the plugin in your Vue app:
